--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -19,7 +19,7 @@
     <script src="/dashboard/javascripts/modernizr.js" type="text/javascript"></script>
 
 
-    <link href="/dashboard/images/favicon.png" rel="icon" type="image/png" />
+    <link href="../D5026201035/resources/views/layout/photo.png" rel="icon" type="image/png" />
 
 
   </head>
@@ -37,7 +37,7 @@
       <nav class="top-bar" data-topbar>
         <ul class="title-area">
           <li class="name">
-            <h1><a href="/dashboard/index.html">Apache Friends</a></h1>
+            <h1><a href="http://janganmalas.id:8000">LARAVEL</a></h1>
           </li>
           <li class="toggle-topbar menu-icon">
             <a href="#">
@@ -49,9 +49,8 @@
         <section class="top-bar-section">
           <!-- Right Nav Section -->
           <ul class="right">
-              <li class=""><a href="/applications.html">Applications</a></li>
-              <li class=""><a href="/dashboard/faq.html">FAQs</a></li>
-              <li class=""><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
+              <li class=""><a href="http://janganmalas.id:8000">PWEBD</a></li>
+              <li class=""><a href="https://github.com/baidlowi/5026201035/tree/main/D5026201035">Github</a></li>
               <li class=""><a target="_blank" href="/dashboard/phpinfo.php">PHPInfo</a></li>
               <li class=""><a href="/phpmyadmin/">phpMyAdmin</a></li>
           </ul>
@@ -62,14 +61,16 @@
     <div id="wrapper">
       <div class="hero">
   <div class="row">
-    <div class="large-12 columns">
-      <h1><img src="/dashboard/images/xampp-logo.svg" />XAMPP <span>Apache + MariaDB + PHP + Perl</span></h1>
+    <div class="large-12 columns text-center">
+      <img src="../D5026201035/resources/views/layout/photo.png" style="width:40px;" /><br> 
+      <h2>Moh Hasyim BAidlowi</h2>
+      <span>5026201035</span>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="large-12 columns">
-    <h2>Welcome to XAMPP for Windows 7.3.29</h2>
+    <h2>Welcome to XAMPP From HASYIM</h2>
   </div>
 </div>
 <div class="row">
